--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <!-- Animate.css -->
 	<!-- <link rel="stylesheet" href="../static/css/animate.css"> -->
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="../static/css/bootstrap.css">
+	<link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
 	<!-- Flexslider  -->
 	<!-- <link rel="stylesheet" href="../static/css/flexslider.css"> -->
 	<!-- Owl Carousel -->
@@ -50,20 +50,62 @@
 </head>
 <body>
 
-    <div id="navigation-block"> 
-		<div class="container-wrap">
+    <div class="container-fluid">
 
-            {% block links %}
-			{% endblock %}
+        <div id="navigation-block"> 
+
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">The COMIC SWAP</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                      </a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled">Disabled</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+                </div>
+              </nav>
+            
+    
+                {% block links %}
+
+                
+                {% endblock %}
+          
         </div>
-    </div>
-
-    <div id="content-block"> 
-		<div class="container-wrap">
-
-            {% block content %}
-			{% endblock %}
+    
+        <div id="content-block"> 
+            <div class="container-wrap">
+    
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
+
     </div>
 
 
@@ -74,13 +116,23 @@
 
     
 	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script> -->
       <!-- <script src="../static/js/jquery.min.js"></script> -->
       <!-- jQuery Easing -->
       <script src="../static/js/jquery.easing.1.3.js"></script>
       <!-- Bootstrap -->
       <script src="../static/js/bootstrap.min.js"></script>
+
+<!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
       <!-- Waypoints -->
       <!-- <script src="../static/js/jquery.waypoints.min.js"></script> -->
       <!-- Flexslider -->
@@ -99,7 +151,7 @@
       
       
       <!-- JS for db/jQuery auto-complete -->
-      <!-- <script src="../static/js/rememberTogether.js"></script> -->
+      <script src="../static/js/rememberTogether.js"></script>
       <!-- MAIN JS for CSS sliding -->
       <!-- <script src="../static/js/obituary.js"></script> -->
     
