--- a/templates/base.html
+++ b/templates/base.html
@@ -34,70 +34,86 @@
 <body>
 
 
-  <div class="container my-5">
-   <!--Section: Navbars-->
-   <section>
-
-
-
+  <!--Section: Navbars-->
+  <section>
+    
+    <!-- todo: fix color of menu collapse toggle icon to white for small screens -->
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">The Comic Swap</a>
         <button
-          class="navbar-toggler"
-          type="button"
-          data-mdb-toggle="collapse"
-          data-mdb-target="#navbarColor02"
-          aria-controls="navbarColor02"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarColor02"
+        aria-controls="navbarColor02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
           </ul>
-
+          
           <ul class="navbar-nav d-flex flex-row">
             <!-- Icons -->
+            <li class="nav-item me-3 me-lg-0">
+              <form class="d-flex input-group w-auto">
+                <input
+                type="search"
+                class="form-control"
+                placeholder="Search"
+                aria-label="Search"
+                />
+                <button
+                class="btn btn-outline-primary"
+                type="button"
+                data-mdb-ripple-color="dark"
+                >
+                Search
+              </button>
+            </form>
+            </li>
+            
+            
+            
+            
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link" href="#">
                 <i class="fas fa-shopping-cart"></i>
               </a>
             </li>
-            <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
+            
             <!-- Icon dropdown -->
             <li class="nav-item me-3 me-lg-0 dropdown">
               <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-mdb-toggle="dropdown"
-                aria-expanded="false"
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-mdb-toggle="dropdown"
+              aria-expanded="false"
               >
                 <i class="fas fa-user"></i>
               </a>
               <ul
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdown"
-              >
+                >
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li>
                   <a class="dropdown-item" href="#">Another action</a>
@@ -107,7 +123,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="#"
-                    >Something else here</a
+                  >Something else here</a
                   >
                 </li>
               </ul>
@@ -118,10 +134,11 @@
     </nav>
 
     <br />
-
+    
   </section>
   <!--Section: Navbars-->
-
+  
+  <div class="container my-5">
   
   {% block links %}
   
