experimenting with strapi request

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,4 +19,8 @@
     <h3>h3</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eos quos accusamus velit laboriosam neque quam fugiat deleniti ea voluptatum dolorem quidem magnam dolorum excepturi ipsum cumque, tenetur aliquam maxime.</p>
 
+    <h2>Articles</h2>
+   
+    {{ articles }}
+
 {% endblock %}
