--- a/templates/base.html
+++ b/templates/base.html
@@ -59,19 +59,23 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Messages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">My Stuff</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Search</a>
             </li>
           </ul>
+
           
           <ul class="navbar-nav d-flex flex-row">
             <!-- Icons -->
-            <li class="nav-item me-3 me-lg-0">
+            <!-- <li class="nav-item me-3 me-lg-0">
               <form class="d-flex input-group w-auto">
                 <input
                 type="search"
@@ -87,19 +91,19 @@
                 Search
               </button>
             </form>
-            </li>
+            </li> -->
             
             
             
             
-            <li class="nav-item me-3 me-lg-0">
+            <li class="nav-item me-5 me-lg-0">
               <a class="nav-link" href="#">
-                <i class="fas fa-shopping-cart"></i>
+                <i class="fa fa-envelope"></i>
               </a>
             </li>
             
             <!-- Icon dropdown -->
-            <li class="nav-item me-3 me-lg-0 dropdown">
+            <li class="nav-item me-5 dropdown">
               <a
               class="nav-link dropdown-toggle"
               href="#"
@@ -114,16 +118,21 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdown"
                 >
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Login</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Register</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
                   <a class="dropdown-item" href="#"
-                  >Something else here</a
+                  >My Account</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                  >My Account</a
                   >
                 </li>
               </ul>
