basic carousel working - fix pics and make resp

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 	<meta name="description" content="{% block meta_content %}{% endblock %}" />
 	<meta name="keywords" content="the comic swap - trading collectors comic books" />
 	<meta name="author" content="Larry Volz https://www.larry-volz.com" />
+
   <!-- MDB icon -->
   <link rel="icon" href="../static/img/mdb-favicon.ico" type="image/x-icon" />
   <!-- Font Awesome -->
@@ -28,6 +29,23 @@
   <link rel="stylesheet" href="../static/css/mdb.dark.min.css" />
   <!-- Regular MDB theme -->
   <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
+
+  <!-- Required JavaScript libraries collection -->    
+  <!--The jQuery library from local-->    
+  <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+  <!-- Bootstrap library from local        
+        <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
+  
+  <!-- For Carousel -->
+  <link rel="stylesheet" type="text/css" href="../static/css/glider.css">
+  <script src="../static/js/glider.js"></script>
+  
+
+        
+
+        
+
+
 
 </head>
 
@@ -130,11 +148,7 @@
                   >My Account</a
                   >
                 </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                  >My Account</a
-                  >
-                </li>
+
               </ul>
             </li>
           </ul>
@@ -180,6 +194,22 @@
     <script type="text/javascript" src="../static/js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
+
+
+<!-- testing jQuery -->
+<!-- 
+    <script>
+      window.onload = function() {
+          if (window.jQuery) {  
+              alert("jQuery is working!");
+          }
+      }
+      </script> -->
+
+    <!-- CAROUSEL JS -->
+
+    <script src="../static/js/comicSwap.js"></script>
+
     
 </body>
 </html>
