cleaned up index, about link not working

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 	<meta name="keywords" content="the comic swap - trading collectors comic books" />
 	<meta name="author" content="Larry Volz https://www.larry-volz.com" />
 
+
   <!-- MDB icon -->
   <link rel="icon" href="../static/img/mdb-favicon.ico" type="image/x-icon" />
   <!-- Font Awesome -->
@@ -40,7 +41,8 @@
   <link rel="stylesheet" type="text/css" href="../static/css/glider.css">
   <script src="../static/js/glider.js"></script>
   
-
+ <!-- MY STYLESHEET -->
+ <link rel="stylesheet" href="../static/css/comicswap.css">
         
 
         
@@ -77,7 +79,7 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Messages</a>
