--- a/static/css/comicswap.css
+++ b/static/css/comicswap.css
@@ -6,13 +6,17 @@ body {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 3rem;
   font-weight: 700;
   letter-spacing: .02em;
+  margin-bottom: 40px;
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 2.5rem;
+  text-align: center;
+  /* margin-bottom: 30px; */
+  margin-top: 30px ;
 }
 
 h3 {
@@ -139,3 +143,6 @@ h3 {
   padding-top: 10px;
 }
 
+.centered {
+  text-align: center;
+}
