--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,23 @@
 {% block content %}
 
 
+<h1>YOUR SAFE PLACE TO TRADE</h1>
 
-    <h1>The Comic Swap - HOME</h1>
+    <div class="centered">
 
-   <br>
+      <h2>Featured Collectables</h2>
+      <P>Comics for trade or sale</P>
+      <button type="button" style="margin-bottom: 60px;" class="btn btn-primary btn-rounded">
+        View All Collectables
+      </button>
+   
+
+    </div>
     
     <!-- CAROUSEL -->
 
-    <script>
+    <section>
+      <script>
         window.addEventListener('load', function(){
           new Glider(document.querySelector('.glider'), {
             slidesToShow: 4,
@@ -41,9 +50,11 @@
 
     <div class="glider-contain">
         <div class="glider">
-          <div> <img src="../static/images/batman-p-250.jpg"></img></div>
+          <div> 
+            
+            <img src="../static/images/batman-p-250.jpg"></img></div>
           <div> <img src="../static/images/captain_america-p-250.jpg"></img></div>
-          <div> <img src="../static/images/Dr_strange-p-250.jpg"></img></div>
+          <div> <img src="../static/images/Dr_strange-p-500.jpg"></img></div>
           <div> <img src="../static/images/fantastic4_and_black_panther-p-250.jpg"></img></div>
           <div> <img src="../static/images/iron_man-p-250.webp"></img></div>
           <div> <img src="../static/images/spider_man_coolest_pic-p-250.jpg"></img></div>
@@ -56,6 +67,7 @@
         <button aria-label="Next" class="glider-next">»</button>
         <div role="tablist" class="dots"></div>
       </div>
+    </section>
 
     <!-- END CAROUSEL -->
 
