--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">The Comic Swap</a>
+        <a class="navbar-brand" href="/">The Comic Swap</a>
         <button
         class="navbar-toggler"
         type="button"
@@ -76,10 +76,10 @@
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Messages</a>
