--- a/templates/base.html
+++ b/templates/base.html
@@ -82,13 +82,13 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
+            <a class="nav-link" href="/messages">Messages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Stuff</a>
+              <a class="nav-link" href="/mystuff">My Stuff</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Search</a>
+              <a class="nav-link" href="/search">Search</a>
             </li>
           </ul>
 
