added messages, login, register, my account pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,15 +75,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item active">
+          <!-- <li class="nav-item active">
             <a class="nav-link" aria-current="page" href="/">Home</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/messages">Messages</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/mystuff">My Stuff</a>
             </li>
@@ -117,7 +117,7 @@
             
             
             <li class="nav-item me-5 me-lg-0">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/messages">
                 <i class="fa fa-envelope"></i>
               </a>
             </li>
@@ -138,15 +138,15 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdown"
                 >
-                <li><a class="dropdown-item" href="#">Login</a></li>
+                <li><a class="dropdown-item" href="/login">Login</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Register</a>
+                  <a class="dropdown-item" href="/register">Register</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="/myaccount"
                   >My Account</a
                   >
                 </li>
