--- a/templates/index.html
+++ b/templates/index.html
@@ -34,18 +34,21 @@
     <section>
     
     <div class="glider-contain">
-        <div class="glider">
-          <div> 
-            
-            <img src="../static/images/batman-p-250.jpg"></img></div>
-          <div> <img src="../static/images/captain_america-p-250.jpg"></img></div>
-          <div> <img src="../static/images/Dr_strange-p-500.jpg"></img></div>
-          <div> <img src="../static/images/fantastic4_and_black_panther-p-250.jpg"></img></div>
-          <div> <img src="../static/images/iron_man-p-250.webp"></img></div>
-          <div> <img src="../static/images/spider_man_coolest_pic-p-250.jpg"></img></div>
-          <div> <img src="../static/images/superman-p-250.jpg"></img></div>
-          <div> <img src="../static/images/wonder_woman_cooler-p-250.jpg"></img></div>
-          <div> <img src="../static/images/x-men_kitty.jpg"></img></div>
+        <div class="glider row"  
+        style="
+        background-color: #ccc;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+      ">
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/batman-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/captain_america-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/Dr_strange-p-500.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/fantastic4_and_black_panther-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/iron_man-p-250.webp"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/spider_man_coolest_pic-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/superman-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/wonder_woman_cooler-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/x-men_kitty.jpg"></img></div>
         </div>
       
         <button aria-label="Previous" class="glider-prev">«</button>
