search and mystuff front end mockup looking pretty good

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
       <h2>Featured Collectables</h2>
       <P>Comics for trade or sale</P>
-      <button type="button" style="margin-bottom: 60px;" class="btn btn-primary btn-rounded">
+      <button type="button" style="margin-bottom: 60px;" class="btn btn-primary btn-rounded" onclick="location.href='/search'">
         View All Collectables
       </button>
    
