--- a/templates/mystuff.html
+++ b/templates/mystuff.html
@@ -69,6 +69,45 @@
         </tbody>
       </table>
 
+                      <!-- pagination -->
+                      <div class="row">
+                        <div
+                          class="col-lg-4 col-md-12 mb-4 d-flex justify-content-center"
+                        >
+                          <nav aria-label="...">
+                            <ul class="pagination">
+                              <li class="page-item disabled">
+                                <a
+                                  class="page-link"
+                                  href="#"
+                                  tabindex="-1"
+                                  aria-disabled="true"
+                                  >Previous</a
+                                >
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">1</a>
+                              </li>
+                              <li class="page-item active" aria-current="page">
+                                <a class="page-link" href="#"
+                                  >2 <span class="visually-hidden">(current)</span></a
+                                >
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">3</a>
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">Next</a>
+                              </li>
+                            </ul>
+                          </nav>
+                        </div>
+          
+    
+    
+                      </div>
+                    <!-- end pagination -->
+
 
     <h2 id="collection">My Comic Collection</h2>
     <table class="table table-striped mb-5">
@@ -104,6 +143,45 @@
           </tr>
         </tbody>
     </table>
+
+                    <!-- pagination -->
+                    <div class="row">
+                        <div
+                          class="col-lg-4 col-md-12 mb-4 d-flex justify-content-center"
+                        >
+                          <nav aria-label="...">
+                            <ul class="pagination">
+                              <li class="page-item disabled">
+                                <a
+                                  class="page-link"
+                                  href="#"
+                                  tabindex="-1"
+                                  aria-disabled="true"
+                                  >Previous</a
+                                >
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">1</a>
+                              </li>
+                              <li class="page-item active" aria-current="page">
+                                <a class="page-link" href="#"
+                                  >2 <span class="visually-hidden">(current)</span></a
+                                >
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">3</a>
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">Next</a>
+                              </li>
+                            </ul>
+                          </nav>
+                        </div>
+          
+    
+    
+                      </div>
+                    <!-- end pagination -->
 
       <!-- SCRIPT TO MAKE WHOLE TABLE ROW CLICKABLE -->
       <script>
@@ -141,6 +219,44 @@
           
         </tbody>
       </table>
+      <!-- pagination -->
+      <div class="row">
+        <div
+          class="col-lg-4 col-md-12 mb-4 d-flex justify-content-center"
+        >
+          <nav aria-label="...">
+            <ul class="pagination">
+              <li class="page-item disabled">
+                <a
+                  class="page-link"
+                  href="#"
+                  tabindex="-1"
+                  aria-disabled="true"
+                  >Previous</a
+                >
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">1</a>
+              </li>
+              <li class="page-item active" aria-current="page">
+                <a class="page-link" href="#"
+                  >2 <span class="visually-hidden">(current)</span></a
+                >
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+
+
+      </div>
+    <!-- end pagination -->
 
 
 
