--- a/templates/messages.html
+++ b/templates/messages.html
@@ -19,9 +19,69 @@
 
     <h1>MESSAGES</h1>
 
-   <br><br>
+    <table class="table table-striped mb-5">
+        <thead>
+          <tr class="clickable-table-row" data-href="/maildetail">
+            <th scope="col">Date</th>
+            <th scope="col">Message</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="clickable-table-row" data-href="/maildetail">
+            <th scope="row"  data-msg-id="1357">2/3/22</th>
+            <td>I am interested in trading your Iron man #53 for my Spiderman #12.  Please contact me by...</td>
+          </tr>
+          <tr class="clickable-table-row" data-href="/maildetail">
+            <th scope="row"  data-msg-id="1357">5/13/22</th>
+            <td>I am interested in trading your Batman #10 for my Superman #501 plus $250.</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- pagination -->
+      <div class="row">
+        <div
+          class="col-lg-4 col-md-12 mb-4 d-flex justify-content-center"
+        >
+          <nav aria-label="...">
+            <ul class="pagination">
+              <li class="page-item disabled">
+                <a
+                  class="page-link"
+                  href="#"
+                  tabindex="-1"
+                  aria-disabled="true"
+                  >Previous</a
+                >
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">1</a>
+              </li>
+              <li class="page-item active" aria-current="page">
+                <a class="page-link" href="#"
+                  >2 <span class="visually-hidden">(current)</span></a
+                >
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+
+
+      </div>
+    <!-- end pagination -->
     
-  
+      <!-- SCRIPT TO MAKE WHOLE TABLE ROW CLICKABLE -->
+      <script>
+        $('tr[data-href]').on("click", function() {
+            document.location = $(this).data('href');
+        });
+    </script>
 
 
 
