maildetail looking good - do reply and delete modal

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -22,17 +22,20 @@
     <table class="table table-striped mb-5">
         <thead>
           <tr class="clickable-table-row" data-href="/maildetail">
-            <th scope="col">Date</th>
+              <th scope="col">Date</th>
+            <th scope="col">From</th>
             <th scope="col">Message</th>
           </tr>
         </thead>
         <tbody>
           <tr class="clickable-table-row" data-href="/maildetail">
             <th scope="row"  data-msg-id="1357">2/3/22</th>
+            <td>RedLeader12</td>
             <td>I am interested in trading your Iron man #53 for my Spiderman #12.  Please contact me by...</td>
           </tr>
           <tr class="clickable-table-row" data-href="/maildetail">
             <th scope="row"  data-msg-id="1357">5/13/22</th>
+            <td>Loki123</td>
             <td>I am interested in trading your Batman #10 for my Superman #501 plus $250.</td>
           </tr>
         </tbody>
