--- a/templates/maildetail.html
+++ b/templates/maildetail.html
@@ -35,7 +35,7 @@
                           <button type="button" class="btn btn-info" onclick="location.href='/messages'">
                             Back
                           </button>
-                          <button type="button" class="btn btn-primary">
+                          <button type="button" class="btn btn-primary" onclick="location.href='/newmail'">
                             Reply
                           </button>
                           <button type="button" class="btn btn-danger">
