btns for comic detail fixed message in navbar w/badge

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,9 @@
             
             <li class="nav-item me-5 me-lg-0">
               <a class="nav-link" href="/messages">
-                <i class="fa fa-envelope"></i>
+                <!-- <i class="fa fa-envelope"></i> -->
+                <i class="fas fa-envelope fa-lg"></i>
+                <span class="badge rounded-pill badge-notification bg-danger">3</span>
               </a>
             </li>
             
