--- a/templates/comic-detail.html
+++ b/templates/comic-detail.html
@@ -21,6 +21,24 @@
     <div class="row">
         <div class="col-3 mb-4">
         <img src="../static/images/batman-p-250.jpg"></img>
+        <div class="row ">
+            <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" >
+                MESSAGE OWNER
+              </button>
+            </div>
+            <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-secondary" data-mdb-ripple-color="dark" >
+                OFFER A TRADE
+              </button>
+            </div>
+            <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-success" data-mdb-ripple-color="dark" >
+                ACCEPT OFFER
+                </button>
+            </div>
+
+        </div>
         
         </div>
         <div class="col-9 mb-4">
@@ -321,8 +339,8 @@
     
             
         
-                    <!-- Text input -->
-                    <div class="form-outline mb-4">
+                    <!-- Text input address-->
+                    <!-- <div class="form-outline mb-4">
                         <input
                         type="text"
                         id="form6Example4"
@@ -364,10 +382,10 @@
                             ></div>
                             <div class="form-notch-trailing"></div>
                         </div>
-                    </div>
+                    </div> -->
         
                     <!-- Email input -->
-                    <div class="form-outline mb-4">
+                    <!-- <div class="form-outline mb-4">
                         <input
                         type="email"
                         id="form6Example5"
@@ -409,10 +427,10 @@
                             ></div>
                             <div class="form-notch-trailing"></div>
                         </div>
-                    </div>
+                    </div> -->
         
-                    <!-- Number input -->
-                    <div class="form-outline mb-4">
+                    <!-- Number input telephone-->
+                    <!-- <div class="form-outline mb-4">
                         <input
                             type="number"
                             id="form6Example6"
@@ -446,7 +464,7 @@
                             ></div>
                             <div class="form-notch-trailing"></div>
                         </div>
-                        </div>
+                        </div> -->
             
                     <!-- Message input -->
                     <div class="form-outline mb-4">
@@ -486,7 +504,7 @@
                     </div>
             
                     <!-- Checkbox -->
-                    <div class="form-check d-flex justify-content-center mb-4">
+                    <!-- <div class="form-check d-flex justify-content-center mb-4">
                         <input
                         class="form-check-input me-2"
                         type="checkbox"
@@ -497,15 +515,9 @@
                         <label class="form-check-label" for="form6Example8">
                             Create an account?
                         </label>
-                    </div>
+                    </div> -->
             
-                    <!-- Submit button -->
-                    <button
-                    type="submit"
-                    class="btn btn-primary btn-block mb-4"
-                    >
-                    Place order
-                    </button>
+ 
 
                 </form>
 
