--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,12 @@
 
     <!-- END CAROUSEL -->
 
-
+    <ul>
+      <li><b>To Do:</b></li>
+      <li>Connect glider to database to autopopulate </li>
+      <li>clean up carousel (remove shadows? check glider.js docs)</li>
+      <li>Maybe do a canva hero layout up top (filtered covers? Superhero logos?)</li>
+      <li></li>
+    </ul>
 
 {% endblock %}
