cleaned up index and added todo's

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,10 @@
 
 {% block content %}
 
+<img src="../static/images/dc_montage.jpg" alt="">
 
 <h1>YOUR SAFE PLACE TO TRADE</h1>
+
 
     <div class="centered">
 
