--- a/templates/base.html
+++ b/templates/base.html
@@ -226,16 +226,13 @@
                         <h5 class="text-uppercase">TheComicSwap.com</h5>
     
                         <p>
-                          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                          Iste atque ea quis molestias. Fugiat pariatur maxime quis
-                          culpa corporis vitae repudiandae aliquam voluptatem
-                          veniam, est atque cumque eum delectus sint!
+                          
                         </p>
                       </div>
                       <!--Grid column-->
     
-                      <!--Grid column-->
-                      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                      <!-- LINKS Grid column 1-->
+                      <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
     
                         <ul class="list-unstyled">
@@ -252,11 +249,11 @@
                             <a href="#!" class="text-white">Link 4</a>
                           </li>
                         </ul>
-                      </div>
+                      </div> -->
                       <!--Grid column-->
     
-                      <!--Grid column-->
-                      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                      <!--LINKS Grid column 2 -->
+                      <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
     
                         <ul class="list-unstyled">
@@ -273,7 +270,7 @@
                             <a href="#!" class="text-white">Link 4</a>
                           </li>
                         </ul>
-                      </div>
+                      </div> -->
                       <!--Grid column-->
                     </div>
                     <!--Grid row-->
