--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,6 @@
 
   <section class="border p-4 text-center mb-4">
     <header>
-
       <!-- Background image -->
       <div
         class="p-5 text-center bg-image"
@@ -45,14 +44,15 @@
     </header>
   </section>
 
+
+
 {% endblock %}
 
 
 {% block content %}
 
-
-
-    <div class="centered">
+    <div class="centered" style="position: relative;">
+      <img src="../static/images/cartoon_girl_420w.png" alt="" id="cartoon_girl">
 
       <h2>Featured Collectables</h2>
       <h4>Comics currently for trade or sale</h4>
