about page done

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,9 +19,98 @@
 
     <h1>ABOUT</h1>
 
-   <br><br>
+    <!-- benefits card -->
+
+    <section>
+        <div class="row ">
+              
+            <div class="card mb-2 ">
+                <div class="row g-0">
+                  <div class="col-md-4 mb-4">
+                    <img
+                      src="../static/images/YEAH.png"
+                      alt="..."
+                      class="img-fluid"
+                      style="max-width: 240px;"
+                    />
+                  </div>
+                  <div class="col-md-8 mb-4">
+                    <div class="card-body">
+                      <h5 class="card-title">The Comic Swap Benefits</h5>
+         
+                      <ul>
+                        <li>Your book is insured</li>
+                        <li>We physically inspect all trades</li>
+                        <li>Your money is not released until all parties are satisfied</li>
+                      </ul>
+                      <!-- <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card mb-2" >
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="../static/images/storefront-pic.jpeg"
+                      alt="..."
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Origin Story</h5>
+                      <p class="card-text">
+                        I have been reading and collecting comics since I was 5 years old.  In addition to the amazing journey from the stories in the comics, this hobby has been a great way to meet and connect with a fantastic comic enthusiast community
+                      </p>
+                      <p class="card-text">
+                        I always enjoyed buying comics and trading them as my interests in collecting changed.  While comic stores and online auction platforms are great, in order to get the comics I wanted, I would have to sell or trade them with fees that ranged from 10-20+% of the comic value and lose that valuable equity in those books.
+                      </p>
+                      <p class="card-text">
+                        Thus, theComicSwap.com was born.
+                      </p>
+                      <p class="card-text">The Comic Swap provides fellow collectors the assurance and confidence that there is a third-party resource to provide a guarantee that both parties will have the trade verified and insure that what you want is what you receive.</p>
+                      <p>As the first website to validate, insure, and provide a guarantee that the trades are correct, I am confident that this resource will provide you with the best professional experience for comic trading.</p>
+                      <p class="card-text">Enjoy the collecting journey!</p>
+                      <div class="signature">
+                        <p class="card-text">Cheers,</p>
+                        <p class="card-text" id="rodney-sig">Rodney</p>
+                      
+                      <!-- <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+    <!-- end benefits card -->
+
+    <!-- Rodney origin story -->
+
+ 
     
-  
+
+
+
+
+    
+
+          
+    </section>
+
+    <!-- end Rodney origin -->
+    
+</div>
 
 
 
