fixed read/reply icons/links in messages - do trash

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -31,19 +31,22 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="clickable-table-row" data-href="/maildetail">
+          <tr class="" data-href="/maildetail">
             <th scope="row"  data-msg-id="1357">2/3/22</th>
             <td>RedLeader12</td>
             <td>I am interested in trading your Iron man #53 for my Spiderman #12.  Please contact me by...</td>
-            <td><i class="fa-solid fa-magnifying-glass"></i></td>
-            <td><i class="fa fa-envelope"></i></td>
-            <td><i class="fa-solid fa-trash"></i></td>
+            <td><a href="/maildetail"><i class="fa fa-eye"></i></a></td>
+            <td><a href="/newmail"><i class="fa fa-envelope"></i></a></td>
+            <td><i class="fa fa-trash"></i></td>
           </tr>
 
-          <tr class="clickable-table-row" data-href="/maildetail">
+          <tr class="" data-href="/maildetail">
             <th scope="row"  data-msg-id="1357">5/13/22</th>
             <td>Loki123</td>
             <td>I am interested in trading your Batman #10 for my Superman #501 plus $250.</td>
+            <td><a href="/maildetail"><i class="fa fa-eye"></i></a></td>
+            <td><a href="/newmail"><i class="fa fa-envelope"></i></a></td>
+            <td><i class="fa fa-trash"></i></td>
           </tr>
         </tbody>
       </table>
