--- a/templates/messages.html
+++ b/templates/messages.html
@@ -37,7 +37,10 @@
             <td>I am interested in trading your Iron man #53 for my Spiderman #12.  Please contact me by...</td>
             <td><a href="/maildetail"><i class="fa fa-eye"></i></a></td>
             <td><a href="/newmail"><i class="fa fa-envelope"></i></a></td>
-            <td><i class="fa fa-trash"></i></td>
+            <td>
+              <i class="fa fa-trash" data-mdb-toggle="modal"
+              data-mdb-target="#exampleModal"></i> 
+            </td>
           </tr>
 
           <tr class="" data-href="/maildetail">
@@ -46,7 +49,8 @@
             <td>I am interested in trading your Batman #10 for my Superman #501 plus $250.</td>
             <td><a href="/maildetail"><i class="fa fa-eye"></i></a></td>
             <td><a href="/newmail"><i class="fa fa-envelope"></i></a></td>
-            <td><i class="fa fa-trash"></i></td>
+            <td><i class="fa fa-trash" data-mdb-toggle="modal"
+              data-mdb-target="#exampleModal"></i> </td>
           </tr>
         </tbody>
       </table>
@@ -100,13 +104,45 @@
     <!-- end pagination -->
 
 
-    
-      <!-- SCRIPT TO MAKE WHOLE TABLE ROW CLICKABLE -->
-      <!-- <script>
-        $('tr[data-href]').on("click", function() {
-            document.location = $(this).data('href');
-        });
-    </script> -->
+       <!-- Modal -->
+       <div
+       class="modal fade"
+       id="exampleModal"
+       tabindex="-1"
+       aria-labelledby="exampleModalLabel"
+       aria-hidden="true"
+     >
+       <div class="modal-dialog">
+         <div class="modal-content">
+           <div class="modal-header">
+             <h5 class="modal-title" id="exampleModalLabel">
+               Delete this message?
+             </h5>
+             <button
+               type="button"
+               class="btn-close"
+               data-mdb-dismiss="modal"
+               aria-label="Cancel"
+             ></button>
+           </div>
+           <!-- <div class="modal-body">...</div> -->
+           <div class="modal-footer">
+             <button
+               type="button"
+               class="btn btn-secondary"
+               data-mdb-dismiss="modal"
+             >
+               Cancel
+             </button>
+             <button type="button" class="btn btn-danger">
+               Delete
+             </button>
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <!-- end Modal -->
 
 
 
