--- a/templates/messages.html
+++ b/templates/messages.html
@@ -134,7 +134,7 @@
              >
                Cancel
              </button>
-             <button type="button" class="btn btn-danger">
+             <button type="button" class="btn btn-danger" onclick="location.href='/deletemsg'">
                Delete
              </button>
            </div>
