added message sent route

--- a/templates/newmail.html
+++ b/templates/newmail.html
@@ -149,8 +149,9 @@
             
                     <!-- Submit button -->
                     <button
-                    type="submit"
+                    type="button"
                     class="btn btn-primary btn-block mb-4"
+                    onclick="location.href='/msgsent'"
                     >
                     Send Message
                     </button>
@@ -168,13 +169,7 @@
             </section>
             <!--Section: New Mail form-->
 
-            <h3>ToDo:</h3>
-            <ul>
-                <li>create mail message in receiver db</li>
-                <li>update new mail flag in receiver db</li>
-                <li>check for new mail/set tag in nav bar if true</li>
-                <li>Send "mail sent" success alert & return to mail list or previous message</li>
-        </ul>
+
             
         </div>
     </div>
