--- a/templates/maildetail.html
+++ b/templates/maildetail.html
@@ -38,7 +38,8 @@
                           <button type="button" class="btn btn-primary" onclick="location.href='/newmail'">
                             Reply
                           </button>
-                          <button type="button" class="btn btn-danger">
+                          <button type="button" class="btn btn-danger" data-mdb-toggle="modal"
+                          data-mdb-target="#exampleModal">
                             Delete
                           </button>
                         </div>
@@ -47,7 +48,45 @@
                     </div>
                     <!--Grid column-->
       
- 
+                    <!-- Modal -->
+       <div
+       class="modal fade"
+       id="exampleModal"
+       tabindex="-1"
+       aria-labelledby="exampleModalLabel"
+       aria-hidden="true"
+     >
+       <div class="modal-dialog">
+         <div class="modal-content">
+           <div class="modal-header">
+             <h5 class="modal-title" id="exampleModalLabel">
+               Delete this message?
+             </h5>
+             <button
+               type="button"
+               class="btn-close"
+               data-mdb-dismiss="modal"
+               aria-label="Cancel"
+             ></button>
+           </div>
+           <!-- <div class="modal-body">...</div> -->
+           <div class="modal-footer">
+             <button
+               type="button"
+               class="btn btn-secondary"
+               data-mdb-dismiss="modal"
+             >
+               Cancel
+             </button>
+             <button type="button" class="btn btn-danger" onclick="location.href='/deletemsg'">
+               Delete
+             </button>
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <!-- end Modal -->
 
 
 
