made route for subscribe - fix form on index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -301,7 +301,7 @@
                     <form action="">
                       <!--Grid row-->
                       <div class="row">
-                        <!--Grid column-->
+                        <!--Grid column SUBSCRIBE box-->
                         <div class="col-auto mb-4 mb-md-0">
                           <p class="pt-2">
                             <strong>Sign up for our newsletter</strong>
@@ -350,7 +350,7 @@
                         <!--Grid column-->
                         <div class="col-auto mb-4 mb-md-0">
                           <!-- Submit button -->
-                          <button type="submit" class="btn btn-primary mb-4">
+                          <button type="button" class="btn btn-primary mb-4" onclick="location.href='/subscribe'">
                             Subscribe
                           </button>
                         </div>
